2007-11-06 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: english issues
	* src/Relationship.py: english issues

2007-11-06 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: fix error with nephew, niece

2007-11-06 Benny Malengier <benny.malengier@gramps-project.org>
	* src/gramps.py: text error, issue #1342

2007-11-06 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: refractor, use class
	* src/Relationship.py: further improvements
	* src/plugins/rel_pl.py: rename procedure to avoid conflict
	* src/plugins/rel_it.py: start of changes
	* src/DisplayState.py: use the new method get_one_relation

2007-11-05 Jim Sack <jgsack@san.rr.com>
	* src/gen/proxy/dbbase.py
	add missing gettext import (noticed by chance)

2007-11-05 Jim Sack <jgsack@san.rr.com>
	* src/test/test/test_util_test.py fix subtle error in test 2a
	* src/GrampsDbUtils/test/_GedcomChar_test.py add for testing next
	* src/ansel_utf8.py replacement fixes failed _GedcomChar 
	* src/test/ansel_utf8_test.py detailed test for above
	Note that ansel_utf8 fixes one mis-mapped char in the 2.2 version
	 (this fix will be back-ported; both use identical code)

2007-11-05 Jim Sack <jgsack@san.rr.com>
	* src/test/gramps_cli_test.py
	simple test for gramps CLI (after bugfix #1331-1334 )

2007-11-05 Jim Sack <jgsack@san.rr.com>
	* src/gen/utils/callback.py
	* src/gen/utils/test/callback_test.py
	Extracted unittest code to separate file, modified test portion
	slightly to adapt to new testing framework.

2007-11-05 Jim Sack <jgsack@san.rr.com>
	* src/test directory added
	* src/test/{__init__,regrtest,test_init}.py added
	* src/test/test/test_util_test.py added
	First steps in a new unittest framework

2007-11-05 Jim Sack <jgsack@san.rr.com>
	* remove 2 files from version control: config.guess and config.sub
	These are generated by configure (via autogen.sh).

2007-11-04  Stéphane Charette  <stephanecharette@gmail.com>