@@ -135,8 +135,13 @@ class AddMediaObject(ManagedWindow.ManagedWindow):
             mobj.set_handle(Utils.create_id())
             mobj.set_mime_type(None)
         else:
-            filename = unicode(self.file_text.get_filename(), 
-                               sys.getfilesystemencoding())
+            if self.file_text.get_filename() is None:
+                msgstr = _("Import failed")
+                msgstr2 = _("The filename supplied could not be found.")
+                ErrorDialog(msgstr, msgstr2)
+                return
+            
+            filename =  Utils.get_unicode_path(self.file_text.get_filename())
             full_file = filename
 
             if self.relpath.get_active():
